# doc_reader

./: .gitignore  ARCHITECTURE.md  README.md  TRADEOFFS.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Procfile  celerybeat-schedule  check_setup.py  pyproject.toml  railway.toml  requirements.txt  start.sh
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/ai/: __init__.py  orchestrator.py  prompts.py  streaming.py  tool_executor.py  tool_schemas.py  tools.py
backend/app/api/: deps.py
backend/app/cli/: document.py
backend/app/db/: __init__.py  base.py  bootstrap.py  session.py
backend/app/models/: __init__.py  document.py  document_base.py  history.py  query.py  section_dependency.py  suggestion.py
backend/app/schemas/: __init__.py  document.py  history.py  query.py  suggestion.py  tasks.py  tool_schemas.py
backend/app/services/: __init__.py  dependency_service.py  document_service.py  event_service.py  history_service.py  search_service.py  seeding.py
backend/app/tasks/: __init__.py  document_tasks.py  query_tasks.py  sync_tasks.py
backend/app/tests/: test_tool_handlers.py
backend/app/utils/: celery_helpers.py  files.py
backend/chroma_data/: chroma.sqlite3
backend/data/: config.md  context.md  results.md  running_agents.md  tracing.md  usage.md
backend/data/models/: litellm.md
backend/data/realtime/: quickstart.md
backend/data/sessions/: encrypted_session.md  sqlalchemy_session.md
backend/scripts/: seed_chromadb.py  seed_documents.py  vectors.py
backend/tests/: test_setup.py
data/: agents.md  mcp.md  (+8 more)
(+61 files in other folders)
